# qb-gsee-benchmark

./: .gitignore  README.md  artifact.miniML.features_and_labels2.csv  probs.csv  setup.cfg  summary.csv
DMRG_compute_time_analysis/: DMRG_compute_time_for_homogeneous_catalysis_instances.xlsx  README.md  correlation_of_features_and_runtimes.m  correlation_of_features_and_runtimes.mat
Hamiltonian_features/: README.md
examples/: README.md  compare_to_homcat_LREs.py  csf_weight.ipynb  fetch_file_from_sftp_server.py  full_example.md  get_overlap.ipynb  get_sftp_key.py  run_dmrg.ipynb  run_support.py  sftp-fetch.ipynb  task_id_map.csv  validate_json_files.py  validate_schema.ipynb
json_files_with_errors/: README.md  problem_instance.blue_dimer.dc8bdc56-5ebd-4996-6b81-81b1a06d8c76.json.1732054148.0367823.ERROR  problem_instance.fe_red.a8895776-3583-4884-fbc7-d6f9df21a7ac.json.1732132212.317609.ERROR  problem_instance.planted_solution_0001.3d3b9e8a-7842-4ca1-bd82-eddb9804972d.json.1732054147.7770731.ERROR  problem_instance.planted_solution_0002.00043d56-ed63-4266-907c-99c95c51b9db.json.1732054147.8307862.ERROR  problem_instance.planted_solution_0004.e0adafc5-789e-43e6-8f9e-e718da28de3a.json.1732054147.625478.ERROR  problem_instance.planted_solution_0006.42958a3e-8b35-4992-acd8-6711848066c1.json.1732054148.1976607.ERROR  problem_instance.planted_solution_0011.766ba2da-e72a-4e03-a739-f97269026fc4.json.1732054147.528341.ERROR  problem_instance.ru_mono.7213642b-5f16-48be-d5e5-2bc42ebb8526.json.1732054147.7294176.ERROR
notebooks/: run_dmrg.ipynb
performance_metrics/: performance_metrics.CCSD(T).c09217e6-d0f7-4b0f-81c4-79210b7ac878.json  performance_metrics.CCSD.0a29e54f-bef9-4d19-bafa-d94b1c4b37aa.json  performance_metrics.CCSDT_PLACEHOLDER.fd13c864-baf1-44de-b52d-0e5dd69f647a.52576a21-8818-4009-8fc5-666148e0445d.json  performance_metrics.CCSDT_PLACEHOLDER.fd13c864-baf1-44de-b52d-0e5dd69f647a.json  performance_metrics.CISD.418f060e-496b-4024-8d2d-9b1f8791e76d.json  performance_metrics.DF QPE.f2d73e1f-3058-43c4-a634-b6c267c84ff1.19f79118-acab-4770-8ea6-0915f2712955.json  performance_metrics.DF QPE.f2d73e1f-3058-43c4-a634-b6c267c84ff1.32034c2e-2319-4da8-8d99-65d0a3807291.json  performance_metrics.DF_QPE.2610d8de-bd3a-469e-9a80-473e8988755f.json  performance_metrics.DF_QPE.4b07b89f-c66f-4e72-8c24-df3e4222cb41.json  performance_metrics.DF_QPE.5d768520-b3d0-4292-bbb4-9776fa128107.json  performance_metrics.DF_QPE.5dad4064-cd11-412f-85cb-d722afe3b3de.acd97190-9a59-49bf-a6c0-e635837867d8.json  (+29 more)
schemas/: README.md  uuid.schema.json  (+4 more)
(+6647 files in other folders)
