[metadata]
name = qb-gsee-benchmark
description = "DARPA QB GSEE Benchmark"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/isi-usc-edu/qb-gsee-benchmark
author = DARPA Quantum Benchmarking Program
author_email = bobqat@l3harris.com,
license = Apache-2.0
license_files = LICENSE
classifiers =
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Topic :: Scientific/Engineering
#   License :: OSI Approved :: Apache Software License



[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:

# For Python version upper bound, see https://github.com/isi-usc-edu/pyLIQTR/issues/58
python_requires = >=3.12.0, <=3.12.2 

install_requires =
    attrs>=23.2.0 # See https://github.com/quantumlib/Qualtran/issues/1520
    pyLIQTR>=1.4.2
    juliacall<=0.9.24 # See https://github.com/isi-usc-edu/pyLIQTR/issues/71
    qualtran==0.4.0
    pyscf
    openfermion
    openfermionpyscf
    numpy
    paramiko
    pandas
    scikit-learn
    shap
    jsonschema
    check-jsonschema
    openpyxl
    markdown
    weasyprint
    notebook
    certifi
    requests
    seaborn
    pyqt5
    umap-learn
    


[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
